Hosting section postion improved; not fixed - wrapping and alignment

--- a/styles/sass/_home-page.scss
+++ b/styles/sass/_home-page.scss
@@ -87,7 +87,8 @@ header h2 {
   margin-top: 0;
 }
 
-.content-row-1, .content-row-2 {
+.content-row-1,
+.content-row-2 {
   display: flex;
   flex: 1;
   justify-content: space-around;
@@ -130,29 +131,30 @@ header h2 {
   flex-wrap: wrap;
 }
 
-.locations-row-1, .locations-row-2 {
+.locations-row-1,
+.locations-row-2 {
   display: flex;
   flex: 1;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
-.left-image {
-  // position: absolute;
-  // top: -150px;
-  // left: -80px;
-}
-
-.right-image {
-  // position: absolute;
-  // bottom: -150px;
-  // right: -80px;
-}
-// .wrapper.locations-section {
-//   display: flex;
-//   justify-content: center;
-//   flex-wrap: wrap;
+// .left-image {
+//   // position: absolute;
+//   // top: -150px;
+//   // left: -80px;
 // }
+
+// .right-image {
+//   // position: absolute;
+//   // bottom: -150px;
+//   // right: -80px;
+// }
+// // .wrapper.locations-section {
+// //   display: flex;
+// //   justify-content: center;
+// //   flex-wrap: wrap;
+// // }
 
 
 h3 {
@@ -191,6 +193,7 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .host-content p {
@@ -207,8 +210,10 @@ h3 {
   width: 100%;
 }
 /* Events Section */
+// TO DO
+// 1. Align content vertically in the middle
 .events-section {
-    background-color: $primary-background-color;
+  background-color: $primary-background-color;
   width: 100%;
   padding: 200px 0;
   height: 100%;
@@ -218,12 +223,14 @@ h3 {
 .events-container {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
+  flex: 1;
+  flex-wrap: wrap;
 }
 
-.events-img {
-  // display: flex;
-  // flex-direction: column;
-  // width: 40%;
+.events-image {
+  box-shadow: -25px 25px 0px -5px $secondary-text-color;
+  // needs to be fixed
 }
 .events-content {
   // display: flex;
